# SoftwareRenderer

./: .gdb_history  DepthShader.cpp  DepthShader.h  GouraudShader.cpp  GouraudShader.h  IShader.h  Makefile  NormalMappingShader.cpp  NormalMappingShader.h  PhongShader.cpp  PhongShader.h  Readme.md  TexturedShader.h  Vec.h  a.out  geometry.cpp  geometry.h  gl.cpp  gl.h  gmon.out  main  main.cpp  model.cpp  model.h  out.txt  output.tga  output2.tga  tgaimage.h  zbuffer.tga
src/: CMakeLists.txt  gl.cpp  gl.h  main.cpp  model.cpp  model.h  tgaimage.cpp  tgaimage.h
src/Math/: CMakeLists.txt  Matrix.h  Vec.h
src/Shaders/: CMakeLists.txt  DepthShader.cpp  DepthShader.h  GouraudShader.cpp  GouraudShader.h  IShader.h  NormalMappingShader.cpp  NormalMappingShader.h  PhongShader.cpp  PhongShader.h  TexturedShader.cpp  TexturedShader.h
